# pde1d

./: CMakeLists.txt  README.md  disciption.txt  main.cpp  pde1d.cpp  pde1d.h  pde1d.kdev4
PaxHeaders.3440/: pde1d.kdev4
src/: CMakeLists.txt  Doxyfile.in  colordelegate.cpp  colordelegate.h  controls.cpp  controls.h  controls.ui  curvesmodel.cpp  curvesmodel.h  curvetabdock.cpp  curvetabdock.h  eewidget.cpp  eewidget.h  envwidget.cpp  envwidget.h  errtabdock.cpp  errtabdock.h  errtabdock.ui  femwidget.cpp  femwidget.h  firstwindow.ui  impwidget.cpp  impwidget.h  itemdelegate.cpp  itemdelegate.h  leastsqrwidget.cpp  leastsqrwidget.h  main.cpp  myinputs.cpp  myinputs.h  pde1d.cpp  pde1d.h  pswidget.cpp  pswidget.h  res.qrc  rkwidget.cpp  rkwidget.h  rootNameDialog.ui  simpimpwidget.cpp  simpimpwidget.h  (+5 more)
superlu/: dgssvx.c  slu_util.h
